# stegr

./: .gitignore  Cargo.toml  README.md
src/: decode.rs  encode.rs  main.rs
