[package]
name = "stegr"
version = "0.1.0"
authors = ["johnabs <johnbs1234@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.0"
sha2 = "0.8.1"
aes = "0.3.2"
block-modes = "0.3.3"
twofish = "0.2.0"
itertools = "0.8.2"
structopt = "0.2.10"
rand = "0.7.3"
hex-literal = "0.2.1"
base64 = "0.2.1"
